fix jumping tab nav and remove weird git stuff

--- a/app/styles/app/layouts/sidebar.sass
+++ b/app/styles/app/layouts/sidebar.sass
@@ -68,10 +68,13 @@ $sb-font-size: 14px
     &:after
       transform: translateX(35%)
       display: inline-block
-  a:hover
-    bottom: 0.05em
-    .icon--plus:after
-      color: $teal1
+  #tab_new
+    a:hover
+      .icon--plus:after
+        color: $teal1
+      &:after
+        bottom: 0.05em
+
 
 .sidebar-list
   margin-top: 1.4rem
